Была изменена картинка и изменен текст
Изменен текст на странице news.html и заменена картинка

--- a/news.html
+++ b/news.html
@@ -43,8 +43,8 @@
             <div class="news-item">
                 <h3>Открытие нового магазина в Москве!</h3>
                 <p class="date">15 марта 2025</p>
-                <p>Мы рады сообщить об открытии нашего нового магазина в Москве. Вас ждет широкий ассортимент товаров и профессиональное обслуживание!</p>
-                <img src="images/news/mag.webp" alt="Новый магазин в Москве">
+                <p>Мы рады сообщить об открытии нашего нового магазина в Москве. Вас ждет широкий ассортимент товаров и профессиональное обслуживание! Скидки 10% на все товары</p>
+                <img src="images/news/OIP.webp" alt="Новый магазин в Москве">
             </div>
 
             <div class="news-item">
